feat: added flag to ignore errors in token generation
