# packages/auth-manager/src/connection/models/connectionManager.ts
@@ -10,6 +10,7 @@ import { DomainNotFoundError } from '../../domain/models/errors';
 import { ConnectionRepository } from '../DAL/connectionRepository';
 import { KeyRepository } from '../../key/DAL/keyRepository';
 import { generateToken } from '../../common/crypto';
+import { KeyNotFoundError } from '../../key/models/errors';
 import { ConnectionSearchParams } from './connection';
 import { ConnectionVersionMismatchError, ConnectionNotFoundError } from './errors';
 
@@ -50,7 +51,7 @@ export class ConnectionManager {
     return connection;
   }
 
-  public async upsertConnection(connection: IConnection): Promise<IConnection> {
+  public async upsertConnection(connection: IConnection, ignoreTokenErrors = false): Promise<IConnection> {
     this.logger.info({ msg: 'upserting connection', connection: { environment: connection.environment, version: connection.version } });
     return this.connectionRepository.manager.transaction(async (transactionManager) => {
       const connectionRepo = transactionManager.withRepository(this.connectionRepository);
@@ -68,7 +69,7 @@ export class ConnectionManager {
         throw new DomainNotFoundError(`the following domains do not exist: ${notExistingDomains.join(', ')}`);
       }
 
-      connection.token = await this.handleToken(connection, this.keyRepository);
+      connection.token = await this.handleToken(connection, transactionManager.withRepository(this.keyRepository), !ignoreTokenErrors);
 
       const maxVersion = await connectionRepo.getMaxVersionWithLock(connection.name, connection.environment);
 
@@ -96,7 +97,7 @@ export class ConnectionManager {
     });
   }
 
-  private async handleToken(connection: IConnection, transactionKeyRepo: KeyRepository): Promise<string> {
+  private async handleToken(connection: IConnection, transactionKeyRepo: KeyRepository, throwOnError?: boolean): Promise<string> {
     if (connection.token !== '') {
       return connection.token;
     }
@@ -108,6 +109,9 @@ export class ConnectionManager {
         msg: 'no private key found for connection, could not create token',
         connection: { name: connection.name, environment: connection.environment },
       });
+      if (throwOnError === true) {
+        throw new KeyNotFoundError('no private key found for connection, could not create token');
+      }
       return '';
     }
 
@@ -115,6 +119,9 @@ export class ConnectionManager {
       return await generateToken(key.privateKey as JWK, connection.name, key.privateKey.kid);
     } catch (error) {
       this.logger.error({ msg: 'could not generate token', error });
+      if (throwOnError === true) {
+        throw error;
+      }
       return '';
     }
   }
